--- a/apps/api/.env-template
+++ b/apps/api/.env-template
@@ -31,3 +31,6 @@ MIDDAY_ENCRYPTION_KEY=
 # Trigger
 TRIGGER_PROJECT_ID=
 TRIGGER_SECRET_KEY=
+
+# Redis Configuration (required for BullMQ)
+REDIS_WORKER_URL=redis://localhost:6379
