--- a/apps/api/.env-template
+++ b/apps/api/.env-template
@@ -27,6 +27,7 @@ ALLOWED_API_ORIGINS="http://localhost:3001"
 LOG_LEVEL=debug
 INVOICE_JWT_SECRET=
 MIDDAY_ENCRYPTION_KEY=
+INTERNAL_SERVICE_SECRET=
 
 # Trigger
 TRIGGER_PROJECT_ID=
