--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@midday/api": "workspace:*",
     "@midday/app-store": "workspace:*",
+    "@midday/desktop-client": "workspace:*",
     "@midday/engine": "workspace:*",
     "@midday/events": "workspace:*",
     "@midday/inbox": "workspace:*",
@@ -29,7 +30,6 @@
     "@midday/supabase": "workspace:*",
     "@midday/ui": "workspace:*",
     "@midday/utils": "workspace:*",
-    "@midday/desktop-client": "workspace:*",
     "@novu/headless": "^2.6.6",
     "@number-flow/react": "^0.5.10",
     "@polar-sh/nextjs": "^0.4.1",
@@ -40,6 +40,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@team-plain/typescript-sdk": "^5.9.0",
     "@trpc/client": "^11.4.2",
+    "@trpc/tanstack-react-query": "^11.4.2",
     "ai": "^4.3.16",
     "change-case": "^5.4.4",
     "date-fns": "^4.1.0",
